--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/kimchi-rice.html">Recipe Title</a>
+        <a href="recipes/kimchi-rice.html">Kimchi Fired Rice</a>
+        <img src="img/kimchi-fried-rice-recipe.jpg" width="150">
+        <h3>Description</h3>
+        <p>This easy Kimchi Fried Rice recipe was a staple in my house growing up and still is today! It's a delicious meal on its own, 
+            especially topped with a fried egg, but can also 
+            be served as a side dish for other Korean dishes like bulgogi or spicy grilled pork belly.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tbsp gochujang</li>
+            <li>1 tbsp soy sause</li>
+            <li>1 tsp sesame oil</li>
+            <li>1 tsp ginger minced</li>
+            <li>1 garlic clove</li>
+            <li>8 oz diced pork belly</li>
+            <li>1 1/2 tablespoon vegetable oil</li>
+            <li>1 tablespoon seasame oil</li>
+            <li>2 eggs beaten</li>
+            <li>1 1/2 cups chopped kimchi + juices</li>
+            <li>2 tablespoon soy sause</li>
+            <li>3 green onions thinly sliced</li>
+            <li>2 1/2 cups steamed rice</li>
+            <li>2 teaspoon toasted sesame seeds</li>
+        </ul>
     </body>
 </html>
