Add steps for the recipe

--- a/index.html
+++ b/index.html
@@ -29,5 +29,31 @@
             <li>2 1/2 cups steamed rice</li>
             <li>2 teaspoon toasted sesame seeds</li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Place all pork marinafe ingredients into a mixing bowl. Whisk marinade
+                ingredients together and pork
+            </li>
+            <li>Mix together until all pork pieces are fully and evenly coated. Set aside and
+                allow pork to mainate for 30 minutes
+            </li>
+            <li>Pour 1 tablespoon vegetable oil into a wok or large skillet over high heat. Add pork and saute for 4
+                to 5 minutes or until browned and just cooked through
+            </li>
+            <li>Remove from skillet and set aside</li>
+            <li>Clean pan out, then pour remaining vegetable oil into skillet followed by beaten eggs. As eggs cook, 
+                gently but quickly stir and break apart into large pieces.
+            </li>
+            <li>Remove from heat and add to cooked pork belly</li>
+            <li>Pour seasame oil into skillet. Add kimchi and soy sause and saute until kimchi begins caramelize, 3 to 4 minutes</li>
+            <li>Add rice and stir together until rice is well coated. Add pork belly and eggs back to the skillet and toss together until
+                evenly distributed through rice mixture
+            </li>
+            <li>Continue to cook until rice begins to char around edges, about 4 to 5 minutes, making sure not to stir the rice so you gently
+                cripsy bits on the bottom
+            </li>
+            <li>Stir in 2 green onions and sesame seeds and remove from heat</li>
+        </ol>
     </body>
 </html>
