Move all information of the kimchi rice recipe to the correct folder, add a picture of spaghetti to img, and link to spaghetti.html
All the information for the kimchi rice recipe is
under the wrong folder. Move all the content for
the picture to the steps to the correct file

Link the spaghetti webpage from the index webpage
for easy traversal

--- a/recipes/kimchi-rice.html
+++ b/recipes/kimchi-rice.html
@@ -6,5 +6,53 @@
 
     <body>
         <h1>Kimchi Fried Rice</h1>
+        <img src="../img/kimchi-fried-rice-recipe.jpg" width="150">
+        <h3>Description</h3>
+        <p>This easy Kimchi Fried Rice recipe was a staple in my house growing up and still is today! It's a delicious meal on its own, 
+            especially topped with a fried egg, but can also 
+            be served as a side dish for other Korean dishes like bulgogi or spicy grilled pork belly.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tbsp gochujang</li>
+            <li>1 tbsp soy sause</li>
+            <li>1 tsp sesame oil</li>
+            <li>1 tsp ginger minced</li>
+            <li>1 garlic clove</li>
+            <li>8 oz diced pork belly</li>
+            <li>1 1/2 tablespoon vegetable oil</li>
+            <li>1 tablespoon seasame oil</li>
+            <li>2 eggs beaten</li>
+            <li>1 1/2 cups chopped kimchi + juices</li>
+            <li>2 tablespoon soy sause</li>
+            <li>3 green onions thinly sliced</li>
+            <li>2 1/2 cups steamed rice</li>
+            <li>2 teaspoon toasted sesame seeds</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Place all pork marinafe ingredients into a mixing bowl. Whisk marinade
+                ingredients together and pork
+            </li>
+            <li>Mix together until all pork pieces are fully and evenly coated. Set aside and
+                allow pork to mainate for 30 minutes
+            </li>
+            <li>Pour 1 tablespoon vegetable oil into a wok or large skillet over high heat. Add pork and saute for 4
+                to 5 minutes or until browned and just cooked through
+            </li>
+            <li>Remove from skillet and set aside</li>
+            <li>Clean pan out, then pour remaining vegetable oil into skillet followed by beaten eggs. As eggs cook, 
+                gently but quickly stir and break apart into large pieces.
+            </li>
+            <li>Remove from heat and add to cooked pork belly</li>
+            <li>Pour seasame oil into skillet. Add kimchi and soy sause and saute until kimchi begins caramelize, 3 to 4 minutes</li>
+            <li>Add rice and stir together until rice is well coated. Add pork belly and eggs back to the skillet and toss together until
+                evenly distributed through rice mixture
+            </li>
+            <li>Continue to cook until rice begins to char around edges, about 4 to 5 minutes, making sure not to stir the rice so you gently
+                cripsy bits on the bottom
+            </li>
+            <li>Stir in 2 green onions and sesame seeds and remove from heat</li>
+        </ol>
     </body>
 </html>
