Add all the details of Description, Ingredients, and Steps to the webpage
Add flavor text to the Description to make it
easier on the eyes for readers

Create an unsorted list of ingredents with bold
words indcating if an ingredent is diced, peeled,
or sliced

Creat a sorted list of steps that the recipe needs
to be completed in

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,6 +6,52 @@
 
     <body>
         <h1>Spaghetti</h1>
-        
+        <img src="../img/Spaghetti-2226.jpg" width="150">
+        <h3>Description</h3>
+        <p><em>Homemade Spaghetti made with a rich and hearty meat sause is a classic dinner recipe. It is 
+            easy to make and always delicious! Serve with garlic bread and salad for an easy weeknigh meal.
+        </em></p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 tablespoons olive oild</li>
+            <li>1 medium onion, <strong>diced</strong></li>
+            <li>1 carrot, <strong>peeled and diced</strong></li>
+            <li>1 celery stalk, <strong>diced</strong></li>
+            <li>5 cloves of garlic, <strong>minced</strong></li>
+            <li>1 lb ground beef</li>
+            <li>1 cup beef broth</li>
+            <li>28 oz crushed tomatoes</li>
+            <li>8 oz tomato sause</li>
+            <li>6 oz tomato paste</li>
+            <li>1 tablespoon Italian seasoning</li>
+            <li>Crushed red pepper</li>
+            <li>2 bay leaves</li>
+            <li>Kosher salt and black pepper</li>
+            <li>16 oz spaghetti</li>
+            <li>Freshly grated Parmesan cheese and fresh basil</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat the olive oil in a large pot over medium-high heat. Add the onion, carrot, and celery to the pot.
+                Cook until softened, about 5 minutes, stirring occasionally. Add the garlic and cook for 1 minute
+            </li>
+            <li>Add the meat and cook until browned, about 5 minutes. Use a wooden spoon to break up the meat into smaller
+                pieces as it cooks. Drain off any excess grease.
+            </li>
+            <li>Pour in the beef broth and bring to a boil and simmer for 2 minutes.</li>
+            <li>Add the crushed tomatos, tomato sauce, tomato paste, Italian seasoning and crushed red pepper flakes.
+                Stir until well combined and add the bay leaves. Season with salt and black pepper.
+            </li>
+            <li>Reduce the heat to low and simmer for 20 to 30 mintues, stirring occasionally. Taste the sauce and adjust seasoning, 
+                as necessary
+            </li>
+            <li>Bring a large pot of salted water to a boil. Cook the spaghetti to al dente, according to package directions. Drain well.</li>
+            <li>Remove the bay leaves from the sause. Add the spaghetti to the meat sause in the pot and use tongs to toss until combined. Alternatively
+                , plate the spaghetti and top with meat sause.
+            </li>
+            <li>Garnish with Parmesan chees and fresh basil. Serve immediatly.</li>
+        </ol>
     </body>
 </html>
