Set up file for vegan taco recipe and add a link to the file from the index web page
Add a boiler plate for the vegan taco web page and
include a heading with the recipe name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <ul>
                 <li><a href="recipes/kimchi-rice.html">Kimchi Fired Rice</a></li>
                 <li><a href="recipes/spaghetti.html">Spaghtti</a></li>
+                <li><a href="recipes/vegan-tacos.html">Vegan tacos</a></li>
             </ul>
         
     </body>
