--- a/recipes/vegan-tacos.html
+++ b/recipes/vegan-tacos.html
@@ -6,5 +6,9 @@
 
     <body>
         <h1>Vegan tacos</h1>
+        <img src="../img/vegan_taco.jpg" width="150">
+        <h3>Description</h3>
+        <h3>Ingredients</h3>
+        <h3>Steps</h3>
     </body>
 </html>
