--- a/recipes/vegan-tacos.html
+++ b/recipes/vegan-tacos.html
@@ -8,7 +8,65 @@
         <h1>Vegan tacos</h1>
         <img src="../img/vegan_taco.jpg" width="150">
         <h3>Description</h3>
+            <p><em>These spciy vegan tacos are bright, fresh & fun to eat! You can easily prep the filling
+                ahead of time, so they're great for entertaining. Adapted from The Vegan Instant Pot Cookbook
+            </em></p>
+        
         <h3>Ingredients</h3>
+            <h4>Mango Avocado Salsa</h4>
+            <ul>
+                <li>2 cups peeled and diced mango, about 2 medium</li>
+                <li>1 medium avocado, <strong>diced</strong></li>
+                <li>3/4 cup <strong>diced</strong> red onion</li>
+                <li>1/2 cup <strong>diced</strong> cucumber</li>
+                <li>3 tablespoons fresh orange juice</li>
+                <li>3 tablespoons fresh lime juice</li>
+                <li>1/2 cup cilantro, <strong>finely chopped</strong></li>
+                <li>Sea salt</li>
+            </ul>
+            <h4>Jamaican Jerk Seasoning</h4>
+            <ul>
+                <li>1 1/2 teaspoon onion powder</li>
+                <li>1 teaspoon sweet or hot paprika</li>
+                <li>1 teaspoon freshly ground black pepper</li>
+                <li>1 teaspoon dired thyme</li>
+                <li>1/2 teaspoon ground allspice</li>
+                <li>1/2 teaspoon ground cumin</li>
+                <li>1/4 teaspoon cayenne pepper</li>
+                <li>1/4 teaspoon ground cinnamon</li>
+                <li>1/4 teaspoon nutmeg</li>
+            </ul>
+            <h4>Jackfruit</h4>
+            <ul>
+                <li>2 cans jackfuit in brine or water</li>
+                <li>2 tablespoons extra-virgin olive oil</li>
+                <li>6 scallions, white and light green parts, sliced</li>
+                <li>4 garlic cloves, <strong>minced</strong></li>
+                <li>1 1/2 inch prece fresh ginger, <strong>grated</strong></li>
+                <li>1 habanero, serrano or jalapeno pepper, <strong>minced</strong></li>
+                <li>2 tablespoons coconut sugar or agave nectar</li>
+                <li>2 tablespoons tomato paste</li>
+                <li>1/4 cup tamari</li>
+                <li>3 tablespoons fresh lime juice</li>
+                <li>corn tortillas</li>
+            </ul>
         <h3>Steps</h3>
+        <ol>
+            <li>Make the mango-sals. In a medium bowl, combine the amngo, avocado, onion, cucumber, orange juice, lime juice, and
+                cilantro and mix gently. Season to taste with salt.
+            </li>
+            <li>Make the Jamaican Jerk Seasoning. Combine all of the spices together in a small bowl.</li>
+            <li>Prepart the jackfruit: Drain the canned jackfuit and lightly rinse under water, shaking off excess water. Use your finger to remove
+                any thick cores and pull the pieces apart so that it resembles shredded pork.
+            </li>
+            <li>In a large pat, heat the oil over medium heat. Add the scallions and cook until browned, 1 to 2 minutes. Add the garlic, ginger, and
+                chile pepper and cook for 1 minute, stirring frequently to prevent buring. Add all of the Jamaican jerk seasoning, stir to coat, and 
+                cook for 30 seconds, stirring constantly, until very fragrant. 
+            </li>
+            <li>Add the shredded jackfruit, coconut sugar, tomato paste, tamari, and lime juice. Stir well. Pour in 1/2 cup water and mix again. Cover
+                and cook for 20 minutes, stirring occasionally.
+            </li>
+            <li>Serve the jackfruit with the tortillas and mango avocado salsa.</li>
+        </ol>
     </body>
 </html>
