Add back buttons at the bottom to go back to the index page after looking at the recipes

--- a/recipes/kimchi-rice.html
+++ b/recipes/kimchi-rice.html
@@ -54,5 +54,7 @@
             </li>
             <li>Stir in 2 green onions and sesame seeds and remove from heat</li>
         </ol>
+
+        <a href="../index.html">Back</a>
     </body>
 </html>
