--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -53,5 +53,7 @@
             </li>
             <li>Garnish with Parmesan chees and fresh basil. Serve immediatly.</li>
         </ol>
+        
+        <a href="../index.html">Back</a>
     </body>
 </html>
