--- a/recipes/vegan-tacos.html
+++ b/recipes/vegan-tacos.html
@@ -68,5 +68,7 @@
             </li>
             <li>Serve the jackfruit with the tortillas and mango avocado salsa.</li>
         </ol>
+
+        <a href="../index.html">Back</a>
     </body>
 </html>
